--- a/FirstSection/src/main/resources/application.properties
+++ b/FirstSection/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# uzywajac * mozemy zaktualizowac wszystkie endpointy
+management.endpoints.web.exposure.include=*
+# usuwamy endpointy z publicznego dostepu
+management.endpoints.web.exposure.exclude=health,info
 
+management.info.env.enabled=true
+
+info.app.main=My Super Cool App
+info.app.description=First Spring APP
+info.app.version=BETA
+
+hello.world=Hello World
+coach.training=Training
+
+server.port=8080
+server.servlet.context-path=/
